--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -3,18 +3,19 @@
 </div>
 <form #f = "ngForm" (ngSubmit) = "onSubmit(f.value)" >
 <!--  Student_Id:<input type="text" name="Student_Id"  ngModel><br>-->
-  Name:<input type="text" name="Name"  ngModel><br>
+  Student Name:<input type="text" name="Name"  ngModel><br><br>
 
+<label>Parent Type
   <select name="Parent_type" ngModel>
       <option value=option>ParentType<option>
           <option value=Father>Father</option>
               <option value=Mother>Mother</option>
       <option value=Guardian>Guardian</option>
      </select>
-
-Parent_Name:<input type="text" name="Parent_Name"  ngModel><br>
-  Phone_Number:<input type="text" name="Phone_Number"  ngModel><br>
-  Mailid:<input type="text" name="Mailid"  ngModel><br>
+</label><br><br>
+Parent Name:<input type="text" name="Parent_Name"  ngModel><br><br>
+  Phone Number:<input type="text" name="Phone_Number"  ngModel><br><br>
+  Mailid:<input type="text" name="Mailid"  ngModel><br><br>
 
 
   <button type="submit"name="submit">Submit</button>
