--- a/src/app/admin-password/admin-password.component.html
+++ b/src/app/admin-password/admin-password.component.html
@@ -1,15 +1,13 @@
-
 <form #f = "ngForm" (ngSubmit) = "onSubmit(f.value)"  >
 
   <p>
-    Welcome {{user.guardian}}..! Set your password..!
+    Welcome {{u[0].First_Name}}..! Set your password..!
   </p>
-  Student Id: {{user.stid}} <br>
-  Student Name: {{user.name}}<br>
+  Employee Id: {{u[0].Employee_Id}} <br>
+  Email Id: {{u[0].Email_id}} <br>
 
-Parent Name: {{user.guardian}}<br><br>
-Mail Id: {{user.mailid}}<br><br>
-Parent Type: {{user.type}}<br><br>
+
+<!--Parent Name: {{user.P_Name}}<br><br>-->
 
 New Password:<input type="password" name="New_Password"  ngModel><br><br>
 Confirm Password:<input type="password" name="Confirm_Password"  ngModel><br><br>
